--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,9 +23,11 @@
     "@babel/core": "^7.28.4",
     "@babel/preset-env": "^7.28.3",
     "@eslint/js": "^9.35.0",
+    "@tailwindcss/postcss": "^4.1.16",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.2",
+    "autoprefixer": "^10.4.21",
     "babel-jest": "^30.2.0",
     "eslint": "^9.35.0",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -33,6 +35,8 @@
     "globals": "^16.4.0",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.16",
     "vite": "^7.1.6"
   },
   "jest": {
