--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,9 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "mysql2": "^3.15.3"
+    "json2csv": "^6.0.0-alpha.2",
+    "mysql2": "^3.15.3",
+    "pdfkit": "^0.17.2"
   },
   "devDependencies": {
     "jest": "^30.2.0",
