--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
+    "axios": "^1.13.2",
+    "daisyui": "^5.5.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
@@ -27,7 +29,7 @@
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.2",
-    "autoprefixer": "^10.4.21",
+    "autoprefixer": "^10.4.22",
     "babel-jest": "^30.2.0",
     "eslint": "^9.35.0",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -36,7 +38,9 @@
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.16",
+    "postcss-nesting": "^13.0.2",
+    "tailwindcss": "^4.1.17",
+    "tailwindcss-animate": "^1.0.7",
     "vite": "^7.1.6"
   },
   "jest": {
